    Removed: beforeDispatchRequest and afterDispatchRequest events
    Removed: cache data directory (/var/cache/imscp directory)
    Removed: imscp-httpd-logs-mngr script (Apache2 logs dirctories are now mounted via the imscp_mountall service)
    Rewritten: iMSCP::SetRights library (usage of built-in functions to avoid call of system chown/chmod commands)

CONFIG
    Added: IMSCP_USER parameter (name of i-MSCP master system user)
    Added: DISTRO_ID, DISTRO_CODENAME and DISTRO_RELEASE parameters in imscp.conf file
    Added: MAX_INSTANCES, MAX_CLIENT_PER_HOST and FTPD_CONF_DIR parameters in proftpd/proftpd.data file
    Added: MOUNT_CUSTOMER_LOGS parameter in apache/apache.data file (allows to disable logs bind mounts)
    Changed: Increased default limits for ProFTPD/VsFTPd
    Depreciated: CACHE_DATA_DIR (/var/cache/imscp) parameter
    Fixed: Allow access to .well-known folder in any case if exists (Apache2)
    Removed: Redundant MYSQL_PREFIX_TYPE parameter
    Removed: VARIABLE_DATA_DIR parameter

CONTRIB
    Added: PhpMyAdmin/10_phpmyadmin_conffile.pl listener file (Allows to override default configuration template file)

DATABASE
    Added: SPF type to the list of allowed DNS resource records
    Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
    Changed: i-MSCP now uses its own SQL user (master SQL user). See errata file for more details.
    Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns

FRONTEND
    Added: Datatable for the file system information table (admin level)
    Added: iMSCP\Net class - Allow to get list of network devices and IP addresses (stdlib)
    Added: SPF DNS resource record type (validated as a TXT record) (client level)
    Added: Support for .phtml template files (stdlib)
    Added: torul() function for escaping a string for the URI or Parameter contexts (stdlib)
    Backported: Exclamation icon from 1.3.x branch