@@ -43,6 +43,9 @@ DATABASE_DIR = /var/lib/mysql
 SYSTEM_USER_PREFIX = vu
 SYSTEM_USER_MIN_UID = 2000
 
+# Whether or not IPv6 is supported (auto-detected)
+IPV6_SUPPORT =
+
 ## Apps installer
 
 GUI_APS_DIR = /var/www/imscp/gui/data/persistent/softwares
