@@ -2,7 +2,9 @@ server {
     server_name {BASE_SERVER_VHOST};
 
     listen {BASE_SERVER_IP}:{BASE_SERVER_VHOST_HTTP_PORT};
+    # SECTION IPv6 BEGIN.
     listen [::]:{BASE_SERVER_VHOST_HTTP_PORT} default ipv6only=on;
+    # SECTION IPv6 END.
 
     root {WEB_DIR}/public;
     index index.php index.html;
