@@ -2,7 +2,9 @@ server {
     server_name {BASE_SERVER_VHOST};
 
     listen {BASE_SERVER_IP}:{BASE_SERVER_VHOST_HTTPS_PORT};
+    # SECTION IPv6 BEGIN.
     listen [::]:{BASE_SERVER_VHOST_HTTPS_PORT} default ipv6only=on;
+    # SECTION IPv6 END.
 
     ssl on;
     ssl_certificate {CONF_DIR}/{BASE_SERVER_VHOST}.pem;
