@@ -1,4 +1,7 @@
-map $scheme $php_https { default off; https on; }
+map $scheme $php_https {
+    default off;
+    https on;
+}
 
 upstream imscp_php {
   server unix:/var/run/imscp_panel.sock;
