@@ -1,13 +1,12 @@
 # Includes DSO modules (this is mandatory in proftpd 1.3)
 Include /etc/proftpd/modules.conf
 
-# Set off to disable IPv6 support which is annoying on IPv4 only boxes.
-UseIPv6                    on
-
 ServerName                 "{HOSTNAME}"
 ServerType                 standalone
 ServerIdent                on "i-MSCP FTP server"
 DeferWelcome               off
+
+UseIPv6                    {IPV6_SUPPORT}
 
 MultilineRFC2228           on
 DefaultServer              on
